--- a/package.json
+++ b/package.json
@@ -29,6 +29,12 @@
     "next-auth": "5.0.0-beta.25",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.2.1",
+    "@mui/material": "^6.2.1",
+    "@tanstack/react-query": "^5.62.8",
     "zod": "^3.23.3"
   },
   "devDependencies": {
