--- a/package.json
+++ b/package.json
@@ -21,20 +21,24 @@
   },
   "dependencies": {
     "@auth/drizzle-adapter": "^1.7.2",
+    "@emotion/cache": "^11.14.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
     "@fontsource/roboto": "^5.1.0",
     "@libsql/client": "^0.9.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
+    "@mui/material-nextjs": "^6.2.1",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.62.8",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
-    "next": "^15.0.1",
+    "next": "^14.0.0",
     "next-auth": "5.0.0-beta.25",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "notistack": "^3.0.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
