--- a/package.json
+++ b/package.json
@@ -25,13 +25,17 @@
     "@emotion/react": "^11.14.0",
     "@emotion/server": "^11.11.0",
     "@emotion/styled": "^11.14.0",
+    "@faker-js/faker": "^9.3.0",
     "@fontsource/roboto": "^5.1.0",
     "@libsql/client": "^0.9.0",
     "@mui/icons-material": "^6.2.1",
     "@mui/material": "^6.2.1",
     "@mui/material-nextjs": "^6.2.1",
+    "@reduxjs/toolkit": "^2.5.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.62.8",
+    "@tanstack/react-table": "^8.20.6",
+    "@tanstack/react-virtual": "^3.11.2",
     "drizzle-orm": "^0.33.0",
     "geist": "^1.3.0",
     "next": "^14.0.0",
@@ -39,6 +43,7 @@
     "notistack": "^3.0.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-redux": "^9.2.0",
     "zod": "^3.23.3"
   },
   "devDependencies": {
